		an extra displacement word, i.e. non-standard dyntrans
		instruction length.
20180503	Implementing i960 lda with immediate 12-bit offset, and
		dummy (nop) sysctl cache invalidation (msg type 0x01).
20180613	Fixing an old TODO for invalidating translation caches when
		using non-4KB pages for MIPS. This makes HelenOS 0.7.1/malta
		boot further than before.
20180614	Removing an old TODO regarding MIPS count/compare interrupts;
		this causes HelenOS on Malta to run much faster (while
		NetBSD/evbmips (malta) and /cobalt are not worse off than
		before).
		Updating NetBSD/evmbips and /cobalt installation instructions
		to 7.1.2 (with a note about clock not being correct).
		More work on the other-than-4KB bug fix.
20180618	Doubling DEFAULT_DYNTRANS_CACHE_SIZE from 48 to 96 MB.
		Updating more NetBSD install instructions to 7.1.2.
20180619	When reading disk sectors from the 'disk' device (for e.g.
		testmips), automatically move to the next sector after
		reading (or writing).
		Allow testmips programs to detect whether the X11 framebuffer
		is in use or not (returns 0x0 as resolution if not).
20180706	Adding a dummy VoCore machine skeleton using the old framework
		(with the wrong CPU type 4KEc instead of 24K).
20180707	Implementing the rorv (aka rotrv?) MIPS instruction.
20180725	More clang fixes.
20180726	Minor progress on booting Linux/VoCore. MIPS rdhwr CC is
		implemented as reading the COP0_COUNT register.
20180819	Applying a patch from Andreas Gustafsson (gson) for the MIPS
		div and ddiv instructions, which checks for divide overflow
		manually before doing the divide.
20180820	Updating the Sprite/DECstation URLs.
20180821	DECstation 5000/125 "3MIN" mode has been broken for quite
		a while; attempting to rewrite/resurrect it.
20180822	Rewrote/refactored enough of the dec_ioasic code to make the
		5000/125's original PROM output its first boot messages again
		(and NetBSD/pmax and OpenBSD/pmax too).