@@ -4707,3 +4707,6 @@ Changelog for GXemul:
 20180822	Rewrote/refactored enough of the dec_ioasic code to make the
 		5000/125's original PROM output its first boot messages again
 		(and NetBSD/pmax and OpenBSD/pmax too).
+20180823	Continuing on making 5000/125 emulation work again: rewriting
+		the interrupt code for the scc serial controller, and
+		connecting TURBOchannel graphics cards.
